--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
       </a>
     </div>
     <div class="flex-grow-1 float-right">
-      <a routerLink="/signup" class="float-right signup mr-2">Sign up</a>
+      <a routerLink="/sign-up" class="float-right signup mr-2">Sign up</a>
       <a routerLink="/login" class="float-right login mr-2">Login</a>
     </div>
   </nav>
